--- a/env/compile.env
+++ b/env/compile.env
@@ -1,9 +1,9 @@
-# Source
+## Source
 SOURCE_PREFIX=/opt/etc/SkyFire_548
 SOURCE_CODE=https://github.com/ProjectSkyfire/SkyFire_548
 BRANCH=main
 
-# cMake
+## cMake
 INSTALL_PREFIX=/opt/server
 SERVERS=1
 SCRIPTS=1
@@ -14,7 +14,6 @@ WITH_WARNINGS=0
 WITH_COREDEBUG=0
 CONF_DIR=/opt/server/etc
 LIBSDIR=/opt/server/libs
-
 
 # Wiki
 
