small fixes entry.sh

--- a/env/compile.env
+++ b/env/compile.env
@@ -13,7 +13,7 @@ USE_COREPCH=1
 WITH_WARNINGS=0
 WITH_COREDEBUG=0
 CONF_DIR=/opt/server/etc
-LIBSDIR=/opt/server/libs
+LIBSDIR=/opt/server/lib
 
 # Wiki
 
