--- a/env/shared.env
+++ b/env/shared.env
@@ -17,10 +17,10 @@ AUTH_DB=auth
 WORLD_DB=world
 CHAR_DB=characters
 
-
+CONSOLE=0
 GAME_TYPE=1
-REALM_ZONE=1
-MOTD_MSG="Welcome"
+REALM_ZONE=0
+MOTD_MSG="Welcome to SkyFire"
 RA_ENABLE=1
 SOAP_ENABLE=1
 SOAP_IP=0.0.0.0
