--- a/env/shared.env
+++ b/env/shared.env
@@ -1,4 +1,6 @@
 ## configuration
+INSTALL_PREFIX=/opt/server
+
 DATA_DIR=$INSTALL_PREFIX/data
 LOGS_DIR=$INSTALL_PREFIX/logs
 ETC_DIR=$INSTALL_PREFIX/etc
