--- a/containers/authserver/Dockerfile
+++ b/containers/authserver/Dockerfile
@@ -4,4 +4,4 @@ RUN apt-get clean all && apt-get update
 RUN apt-get install -y libmysqlclient-dev libssl1.1 libboost-all-dev
 
 WORKDIR /opt/server/bin
-ENTRYPOINT ["./bnetserver"]
+ENTRYPOINT ["./authserver"]
