--- a/containers/authserver/Dockerfile
+++ b/containers/authserver/Dockerfile
@@ -1,4 +1,5 @@
 FROM ubuntu:20.04
+ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get clean all && apt-get update
 RUN apt-get install -y libmysqlclient-dev libssl1.1 libboost-all-dev
