--- a/containers/worldserver/Dockerfile
+++ b/containers/worldserver/Dockerfile
@@ -2,6 +2,7 @@ FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get clean all && apt-get update
-RUN apt-get install -y libmysqlclient-dev libssl1.1 libboost-all-dev libncurses-dev mariadb-client
+RUN apt-get install -y libace-dev libmysqlclient-dev libssl1.1 libboost-all-dev libncurses-dev mariadb-client
 
-WORKDIR /opt/server/binENTRYPOINT ["./worldserver"]
+WORKDIR /opt/server/bin
+ENTRYPOINT ["./worldserver"]
